--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -8,7 +8,7 @@
     </span>
 
     <div class="wrap-input100 m-b-23">
-        <span class="label-input100 color">Usuario</span>
+        <span class="label-input100">Usuario</span>
         <input class="input100"
                type="user" 
                formControlName="user" 
